MC-9812 Fix filter clear button alignment on smaller screen sizes

--- a/src/app/data-explorer/search-filters/search-filters.component.scss
+++ b/src/app/data-explorer/search-filters/search-filters.component.scss
@@ -27,6 +27,8 @@ $search-filters-content-padding: 1.2em 1.2em;
 
 $search-filters-border-radius: 4px;
 
+$search-filters-clear-button-width: 40px;
+
 .mdm-search-filters {
   &__header {
     border-radius: $search-filters-border-radius;
@@ -47,7 +49,8 @@ $search-filters-border-radius: 4px;
     background-color: $search-filters-content-color;
 
     .mat-form-field {
-      width: 85%;
+      // Input field should take up remaining width of container. Assumes we know the exact width of the clear button though
+      width: calc(100% - $search-filters-clear-button-width);
     }
   }
 
